@@ -62,7 +62,6 @@ build() {
 			--add-modules jdk.accessibility \
 			--add-modules jdk.charsets \
 			--add-modules jdk.crypto.ec \
-			--add-modules jdk.crypto.mscapi \
 			--add-modules jdk.dynalink \
 			--add-modules jdk.httpserver \
 			--add-modules jdk.internal.ed \
